--- a/client/src/components/layout/Tile.css
+++ b/client/src/components/layout/Tile.css
@@ -3,7 +3,7 @@
     background: #828282;
     border-radius: 15px;
     width: 225px;
-    height: 335px;
+    height: 372px;
     padding-top : 5px;
     padding-right : 10px;
     padding-left : 10px;
@@ -36,24 +36,25 @@
 }
 
 .ratings{
-
-    background: #F2994A;
-    padding: 7%;
     border-radius: 10px;
-    width: 92px;
-    height: 35px;
-    vertical-align: middle;
-    color: white;
 }
 
 .apply{
-
-    background: #EB5757;
     border-radius: 10px;
-    padding: 7%;
-    width: 100px;
-    height: 35px;
-    text-align: center;
-    vertical-align: middle;
-    color: white;
 }
+
+.pos-header{
+    padding-left: 40%;
+}
+
+.pos-bookmark{
+    padding-top: 15%;
+}
+
+.description{
+    overflow-y: auto;
+    height: 80px;
+}
+
+
+/* #EB5757; */
