--- a/client/src/App.css
+++ b/client/src/App.css
@@ -117,3 +117,21 @@ body{
     text-align: center;
     padding-top: 15%;
 }
+
+.buy-card{
+    width: 60%;
+}
+
+.buy-pos{
+    padding-left: 30%;
+    padding-top: 7%;
+}
+
+.nav-pos-header{
+    padding-top: 3.7%;
+    padding-right: 3%;
+}
+
+.nav-header-pos{
+    padding-top: 6%;
+}
